# Skatepark

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  Skatepark.sln  vcpkg.json
Skatepark/: Skatepark.vcxproj  Skatepark.vcxproj.filters  bowl.cpp  bowl.h  cuboid.cpp  cuboid.h  cylinder.cpp  cylinder.h  glsl.cpp  loader.h  main.cpp  polygon.cpp  shape.h  skateboard.cpp  skatepark.cpp  skatepark.h  skybox.cpp  skybox.frag  skybox.h  speed_bump.cpp  sphere.h  torus.cpp
Skatepark/Debug/: Skatepark.exe.recipe
Skatepark/Debug/Skatepark.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Skatepark.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
app/resource/shader/: shader.frag  skybox.vert
resource/shader/: shader.vert
skatepark/include/: cuboid.h  glsl.h  polygon.h  prism.h  shape.h  skateboard.h  skybox.h  speed_bump.h  torus.h
skatepark/src/: app.cpp  bowl.cpp  glsl.cpp  loader.cpp  prism.cpp  shape.cpp  skateboard.cpp  skatepark.cpp  skybox.cpp  speed_bump.cpp  sphere.cpp
